--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -762,7 +762,8 @@
 			transform: scale(1.3);
 		}
 	}
-	& > .ranking-section {
+	& > .ranking-section,
+	& > .top-100 {
 		.container {
 			transition: all 0.4s ease;
 			background-color: rgba(255, 255, 255, 0.911);
@@ -815,8 +816,10 @@
 					height: 100px;
 					display: flex;
 					padding-bottom: 16px;
+					transform-origin: center;
 					transition: all 0.35s cubic-bezier(0.62, 0.21, 0.19, 0.84);
 					&:hover {
+						height: 220px;
 						.content {
 							.number {
 								top: 12px;
@@ -870,7 +873,7 @@
 					&.featured {
 						top: 0;
 						width: 120%;
-						height: 35vmin;
+						height: 55vmin;
 						color: white;
 						border-radius: 10px;
 						padding-bottom: 0px;
@@ -952,6 +955,9 @@
 										text-align: right;
 										letter-spacing: 0.04em;
 									}
+								}
+								.long::before {
+									content: '';
 								}
 								.moreInfo {
 									background-color: #5eadb7;
@@ -1354,7 +1360,8 @@
 				}
 			}
 		}
-		& > .ranking-section {
+		& > .ranking-section,
+		& > .top-100 {
 			.container {
 				width: 100%;
 				margin: 0;
@@ -1388,18 +1395,10 @@
 								}
 								.info {
 									.moreInfo {
-										bottom: 0;
-										opacity: 1;
-										visibility: visible;
 										transition: all 0.3s 0.3s ease;
 									}
-									.text {
-										top: 52px;
-										color: white;
-										// font-size: 1.5rem;
-									}
+									.text,
 									.plays {
-										top: 42px;
 										color: white;
 									}
 								}
