--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -946,7 +946,7 @@
 									font-weight: 500;
 									transform: translateY(-8px);
 									&::before {
-										content: 'plays';
+										content: 'Wks';
 										position: absolute;
 										bottom: -15px;
 										right: 0;
