--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -239,10 +239,14 @@
 				height: 0;
 				padding: 0;
 				margin-left: 10px;
+				transform: scale(0);
 				transition: all 0.5s ease;
+				transform-origin: top center;
 
 				.title {
-					padding: 0 10px 8px;
+					padding: 7px 10px;
+					font-weight: bold;
+					border-left: 4px solid var(--bg-lv0);
 				}
 				.personal-section {
 					background-color: var(--bg-lv6);
@@ -251,6 +255,7 @@
 				}
 			}
 			&.active .suggest-list {
+				transform: scale(1);
 				padding: 13px 10px;
 				height: 30vh;
 			}
@@ -331,6 +336,7 @@
 
 				.link {
 					text-align: center;
+					cursor: pointer;
 					width: 100px;
 					margin: 0 7px;
 					padding: 5px 15px;
@@ -812,6 +818,7 @@
 					margin: 0 40px;
 				}
 				.itemSong {
+					cursor: pointer;
 					width: 100%;
 					height: 100px;
 					display: flex;
@@ -1090,11 +1097,18 @@
 								height: fit-content;
 								position: absolute;
 								top: 50%;
+								width: calc(100% - 120px);
 								transform: translateY(-50%);
 								transition: all 0.3s ease, color 0.3s 0.1s ease;
 
-								.title {
+								.title,
+								.artist {
 									font-weight: 500;
+									width: calc(100% - 120px);
+									text-align: left;
+									text-overflow: ellipsis;
+									white-space: nowrap;
+									overflow: hidden;
 								}
 							}
 							.plays {
@@ -1141,7 +1155,8 @@
 									display: flex;
 									justify-content: space-around;
 									.heart {
-										background-image: url('https://www.rafaelalucas.com/dailyui/19/assets/heart.svg');
+										font-size: 1.1rem;
+										@extend %flexCenter;
 									}
 									.play {
 										background-image: url('https://www.rafaelalucas.com/dailyui/19/assets/play.svg');
