--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -113,6 +113,7 @@
 						}
 					}
 					.setting-panel {
+						position: relative;
 						display: none;
 						.setting-list {
 							background-color: var(--bg-lv6);
@@ -142,10 +143,11 @@
 								}
 							}
 							.music-quality {
+								position: relative;
 								.quality-panel {
 									display: none;
 									position: absolute;
-									left: -90%;
+									left: -70%;
 									width: 170px;
 									padding: 8px 12px;
 									border-radius: 20px;
