--- a/src/scss/category_sidebar.scss
+++ b/src/scss/category_sidebar.scss
@@ -177,7 +177,7 @@ body {
 			font-size: 1.3rem;
 			border-radius: 10px;
 			border: 3px solid white;
-			transition: all 0.3 ease;
+			transition: all 0.3s ease;
 			&:focus {
 				outline: none;
 				border-color: rgb(0, 0, 0);
