--- a/src/scss/main_content.scss
+++ b/src/scss/main_content.scss
@@ -887,7 +887,7 @@
 						padding-bottom: 0px;
 						margin-bottom: 10px;
 						position: relative;
-						box-shadow: 0px 6px 20px 25% rgb(0, 0, 0);
+						box-shadow: 0px 6px 20px rgb(0, 0, 0);
 						.content {
 							padding: 24px 32px 24px 24px;
 							-webkit-box-align: end;
@@ -979,7 +979,7 @@
 									right: calc(8% + 8px);
 									opacity: 1;
 									visibility: visible;
-									box-shadow: 0px 6px 20px 25% rgb(0, 0, 0);
+									box-shadow: 0px 6px 20px rgb(0, 0, 0);
 
 									.moreItem {
 										display: flex;
