--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,7 @@
+@import 'reset';
+@import 'animation';
+@import 'style';
+@import 'theme';
 @import 'main_content';
 @import 'player_control';
 @import 'category_sidebar';
