--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -63,40 +63,45 @@ a:focus {
 	color: var(--bg-lv0);
 }
 
-.logo {
-	width: 50px;
-	height: 50px;
+blockquote,
+body,
+dd,
+dl,
+dt,
+fieldset,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+html,
+iframe,
+legend,
+li,
+ol,
+p,
+pre,
+textarea,
+ul {
+	margin: 0;
+	padding: 0;
 }
 
-.ico {
-	color: var(--bg-lv0);
-	padding: 16px;
-}
-.ico--click {
-	cursor: pointer;
-}
-.ico--disable {
-	cursor: not-allowed;
-}
-.ico--hide,
-.hide {
-	display: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: 100%;
+	font-weight: 400;
 }
 
-.main-container {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
-.bi {
-	font-size: 1.2em;
-}
-
-.bi-heart:hover::before {
-	transform: scale(1.3);
-}
-
-.bi-heart-fill {
-	animation: beat 0.4s infinite linear alternate;
+ol,
+p,
+ul {
+	list-style: none;
 }
