--- a/src/scss/_main_content.scss
+++ b/src/scss/_main_content.scss
@@ -752,7 +752,10 @@
 		#artist .swiper-wrapper,
 		#playlist .swiper-wrapper {
 			position: absolute;
-			inset: 0;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
 			z-index: 0;
 			width: 100%;
 			height: 230px;
@@ -1191,7 +1194,10 @@
 				&::before {
 					content: '';
 					position: absolute;
-					inset: 0;
+					top: 0;
+					left: 0;
+					right: 0;
+					bottom: 0;
 					opacity: 0;
 					z-index: -1;
 					background: linear-gradient(
