--- a/src/scss/_category_sidebar.scss
+++ b/src/scss/_category_sidebar.scss
@@ -5,6 +5,8 @@
 }
 
 .category-sidebar {
+	$h-used: calc((100vh - 90px - 70px - 54px) / 2);
+
 	background-color: var(--bg-lv8);
 	border-right: 1px solid var(--bg-lv6);
 	display: flex;
@@ -34,16 +36,18 @@
 		padding: 0 25px;
 	}
 	.menu {
-		position: relative;
 		@extend %flexCenter;
+		position: relative;
 		flex-direction: column;
 		margin-bottom: 15px;
 		width: 100%;
+		height: $h-used;
 	}
 	.list {
 		font-size: 1.2rem;
 		width: 100%;
 		margin: 0;
+		overflow: hidden auto;
 
 		.item {
 			cursor: pointer;
@@ -86,7 +90,8 @@
 		overflow: hidden scroll;
 		position: relative;
 		width: 100%;
-		height: 100%;
+		height: $h-used;
+		// height: 100%;
 		&::-webkit-scrollbar {
 			width: 0;
 		}
@@ -235,6 +240,7 @@ body {
 	}
 	& > .new-pl-modal .new-pl-banner a,
 	& > .ad-modal .banner-modal-ad > a {
+		@extend %flexCenter;
 		background-color: #ffdb00;
 		border-color: #ffdb00;
 		border-radius: 25px;
@@ -243,7 +249,6 @@ body {
 		font-weight: 600;
 		font-size: 1.2rem;
 		padding: 6px 35px;
-		@extend %flexCenter;
 		transition: all 0.3s ease;
 	}
 	& > .new-pl-modal .new-pl-banner a > span,
