update services worker

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,3 +7,18 @@
 @import 'category_sidebar';
 @import 'playlist_sidebar';
 @import 'responsive';
+
+.add-to-homescreen {
+	position: fixed;
+	display: block;
+	z-index: 1000;
+	left: 70px;
+	bottom: 90px;
+	width: 100px;
+	height: 50px;
+	padding: 7px;
+	text-align: center;
+	color: black;
+	background-color: white;
+	border: 5px solid black;
+}
